# BlenderSynth

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  project.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
_modules/: argparse.html  index.html
_sources/: index.rst.txt
api/: blendersynth.annotations.annotation_handler.html  blendersynth.annotations.axes.html  blendersynth.annotations.bbox.html  blendersynth.annotations.html  blendersynth.annotations.keypoints.html  blendersynth.annotations.utils.html  blendersynth.blender.aov.html  blendersynth.blender.armature.html  blendersynth.blender.boolean.html  blendersynth.blender.bsyn_object.html  blendersynth.blender.camera.html  blendersynth.blender.compositor.compositor.html  blendersynth.blender.compositor.html  blendersynth.blender.compositor.image_overlay.html  blendersynth.blender.compositor.mask_overlay.html  blendersynth.blender.compositor.node_group.html  blendersynth.blender.compositor.overlay.html  blendersynth.blender.compositor.render_result.html  blendersynth.blender.compositor.visuals.html  blendersynth.blender.curve.html  blendersynth.blender.devices.html  blendersynth.blender.html  blendersynth.blender.light.html  blendersynth.blender.material.html  blendersynth.blender.mesh.html  blendersynth.blender.nodes.html  blendersynth.blender.nodes.node_arranger.html  blendersynth.blender.nodes.node_group.html  blendersynth.blender.nodes.sRGB.html  blendersynth.blender.nodes.shader_node_groups.html  blendersynth.blender.other_objects.html  blendersynth.file.html  (+28 more)
(+294 files in other folders)
