[build-system]
requires = ["setuptools>=42", "wheel", "platformdirs>=3.11.0", "numpy", "tqdm", "ffmpeg-python", "blender-stubs"]
build-backend = "setuptools.build_meta"

[project]
name = "blendersynth"
version = "0.2.0"
authors = [
  { name="Ollie Boyne", email="ollieboyne@gmail.com" },
]
description = "Synthetic Rendering for Blender"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/OllieBoyne/BlenderSynth"